--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=onboarding
 server.port=8090
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
